Code as art, round 3: owners for facts that had none, and guards that can see the defect
Twenty-eight tickets, landed as one commit because they cannot be separated: every
one of them touches at least one of `size-baseline.txt`, `fqcn-baseline.txt`,
`jk.java-conventions.gradle.kts` or `code-as-art.md`, so any split leaves an
intermediate commit that does not build. Per-ticket detail is in
`../kanartist/projects/jk/docs/audits/round3-CAMPAIGN.md` and each ticket's Outcome
section; the corrections log records every claim that did not survive measurement.

CORRECTNESS DEFECTS FIXED (each shipped, each now has a test that fails without the fix)

  jk mvn was broken on macOS. Thirteen of twenty-one isWindows copies tested
  contains("win"), which matches os.name=Darwin, so BuildTool.binaryName() returned
  mvn.cmd on a Mac. Four contains("mac") sites missed Darwin the other way, so
  MemoryProbe skipped its mach read and undersized every worker heap. (JK-2420)

  jk image could not authenticate to any registry. Jib's RegistryImage.named starts
  with an empty retriever list and no site ever added one, so the base-image pull in
  tarball and daemon mode was anonymous — a private base broke plain jk build, not
  just push. The worker's credential spec file was also created with default
  permissions; it is 0600 now. (JK-2464)

  jk-plugin-sdk was unresolvable from Central. Its only dependency rendered as
  jk:host:unspecified, so every consumer failed dependency resolution before
  compiling a line. (JK-2466)

  A build that threw journaled as success. JobOutcome(boolean, int) let a body pair
  any verdict with any exit, and null meant both "declined to rule" and "aborted
  before producing facts"; the accumulator read the second as the first. Sixteen
  journaled verbs also declined on their success path, and the end-of-request EOF
  then stamped them cancelled. JobOutcome is now sealed and the derivation is total.
  (JK-2459)

  jk self nuke did not delete what its confir